# substrate-cli-tools

./: .gitignore  README.md  kusama-web3.url  kusama.url
data/evm/: flipper.abi  flipper.hex  flipper.json  flipper.sol
data/ink/: flipper.wasm
data/solang/: flipper-defaultval.wasm  flipper.json  flipper.wasm
data/solidity/: flipper-initvalue.sol  flipper-noargs.sol  flipper-payable.sol  flipper.sol  flipper2.sol  incrementer.sol  summator.sol
data/waterfall/asmscript/: flipper.wasm  incrementer.wasm
js/: blocks.ts  events.ts  info.ts  package.json
rust/: Cargo.toml  README.md
rust/src/: main.rs
test/: README.md  build.sh  run.sh  utils.sh
test/contracts/: ink-flipper.sh  solang-flipper-initvalue.sh  solang-flipper-noargs.sh  solang-flipper.disabled.sh  solang-flipper.sh  solang-incrementer.sh  solang-summator.sh  waterfall-flipper.disabled.sh  waterfall-flipper.sh  waterfall-incrementer.sh
test/evm/: erc20.sh  erc20.sh.disabled  flipper.sh  flipper_initvalue.sh.disabled  flipper_payable.sh
typescript/: README.md  bind.sh  blocks.ts  common.ts  events.ts  info.ts  package-lock.json  package.json  tsconfig.json  tslint.json
typescript/src/: balances.ts  blocks.ts  common.ts  contracts.ts  events.ts  evm.ts  info.ts  transfer.ts
typescript/src/utils/: accounts.ts  common.ts  connection.ts  contracts.ts  signer.ts  token.ts  types.ts
typescript/test/evm/: flipper.sh
typescript/test/ink/: flipper.sh
typescript/test/solang/: flipper-defaultval.sh  flipper-initval.sh  flipper.sh
typescript/test/waterfall/asmscript/: flipper.sh  incrementer.sh
